<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="8dp" android:paddingBottom="8dp">
        <ImageView
                android:layout_height="match_parent" tools:srcCompat="@tools:sample/avatars[0]"
                android:id="@+id/imageView" android:layout_width="90dp" android:layout_marginStart="0dp"
                android:layout_margin="4dp" android:layout_marginEnd="8dp"
                android:contentDescription="@string/avatarDescription"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/namePlaceholder"
                    android:layout_width="match_parent" android:textStyle="bold"
                    android:layout_height="wrap_content" android:id="@+id/nameTextView"/>
            <TextView
                    android:text="@string/titlePlaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/titleTextView"/>
            <TextView
                    android:text="@string/emailPlaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/emailTextView"/>
            <TextView
                    android:text="@string/phonePlaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/phoneTextView"/>
            <TextView
                    android:text="@string/departmentPlaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/departmentTextView"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>