<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp" tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            android:contentDescription="@string/avatarDescription"/>
    <TextView
            android:text="@string/namePlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:id="@+id/nameTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/emailPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/emailTextView" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/nameTextView"/>
    <TextView
            android:text="@string/phonePlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/phoneTextView" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/emailTextView"/>
    <TextView
            android:text="@string/titlePlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/titleTextView" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/phoneTextView"/>
    <TextView
            android:text="@string/departmentPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/departmentTextView" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>
    <TextView
            android:text="@string/bioPlaceholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/bioTextView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/departmentTextView" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
    />
</android.support.constraint.ConstraintLayout>